@@ -77,6 +77,9 @@ https://github.com/networkupstools/nut/milestone/11
      use of `struct timeval={-1,-1}` as a trigger to `select(..., NULL)`,
      as logged in one part of code and not handled in the other, for the
      indefinite wait [#1922, #2392, #2686, #2670]
+   * The `disable_fix_report_desc` option introduced for `usbhid-ups` driver
+     since NUT v2.8.1 was not applied for early dialog with the device while
+     its report descriptors were being discovered. [#1575, #1512]
 
  - development iterations of NUT should now identify with not only the semantic
    version of a preceding release, but with git-derived information about the
